# E-syn2

./: .cursorignore  .gitignore  BUG.md  Makefile  README.md  TODO.md  analysis_csv.py  analysis_csv_area.py  analysis_csv_if.py  analyze_data.py  clean.sh  collect.sh  convert_to_eqn.sh  deal_csv.py  extract2csv.sh  extraction_time.py  gen_csv.py  gen_csv_area.py  gen_csv_if.py  graph2eqn_ng.py  log_adder.txt  parse_time.py  res_var1.csv  res_var2.csv  run.sh  run1.sh  run1_test_iteration.sh  run2.sh  run2_fast.sh  run_base.sh  run_beta.sh  run_rad.sh  run_sa.sh  run_test_abc.sh  test.sh  test_all.sh  test_parse_time.sh
CSV/: anlysis_csv.py
CSV_130/: anlysis_csv.py
CSV_7/: anlysis_csv.py
EPFL/: bar.eqn  voter.eqn
HOGA/: main_qor_predict.py  model.py  process_data_4_pyg.py  utils.py
HOGA/dataset_prep/: dataset_pyg.py
HOGA/io/: read_graph_raw.py
PPA_predictor/: README.md  empirical_eval_GNN.py  empirical_eval_regressor.py  models4GNN.py  models4regressor.py  parse_json.py  run.py  train_GNN.py
abc/: abc.rc  circuit0_opt.eqn  circuit_opt_miter.cnf  div_50.eqn  multiplier.blif  opt.eqn  output.v
abc_old/: circuit0_opt.eqn  ori.eqn  output.v
analysis/: collect.py  collect_time.py  figure_scale.py  test_all.sh
benchmark/: aig_eqn.sh
benchmark/epfl/: adder.aig  arbiter.aig  cavlc.aig  ctrl.aig  dec.aig  div.aig  i2c.aig  int2float.aig  log2.aig  max.aig  multiplier.aig  priority.aig  router.aig  sin.aig  sqrt.aig  square.aig  voter.aig
benchmark/epfl_eqn/: adder.eqn  arbiter.eqn  cavlc.eqn  ctrl.eqn  dec.eqn  div.eqn  i2c.eqn  int2float.eqn  log2.eqn  mem_ctrl.eqn  multiplier.eqn  priority.eqn  router.eqn  sin.eqn  sqrt.eqn  square.eqn  voter.eqn
data_process_script/: deal_csv.py
deprecated/: run.sh  run1_test_iteration.sh  run2.sh  run2_fast.sh  run2_fast_he.sh  run_beta.py  run_he.sh  run_rad.sh
e-rewriter/: Cargo.toml  circuit0.eqn  result.json
e-rewriter/dynamic_inspect/: graph_internal_serd_1.json  graph_internal_serd_2.json  graph_internal_serd_3.json  graph_internal_serd_4.json
e-rewriter/random_result/: result0.json  result1.json  result10.json  result11.json  result12.json  result13.json  result14.json  result15.json  result16.json  result17.json  result18.json  result19.json  result2.json  result3.json  result4.json  result5.json  result6.json  result7.json  result8.json  result9.json
e-rewriter/src/: main.rs
e-rewriter/src/egraph-serialize/: Cargo.toml
e-rewriter/src/egraph-serialize/src/: lib.rs
e-rewriter/src/utils/: cost.rs  extract_new.rs  graphviz.rs  language.rs  mod.rs  preprocess.rs  runner_md.rs
e-rewriter/test_data_beta_runner/: output_from_egg0.txt  output_from_egg1.txt
extract_res_2_egg/: Cargo.toml  graph_cost_serd_faster-bottom-up.json  out.json
extract_res_2_egg/src/: main.rs
extraction-gym/: Cargo.toml  Makefile  README.md  build.rs  plot.py  process_out_json.py
extraction-gym/abc-gamora/: arch_flags
extraction-gym/abc-gamora/src/map/amap/: amapLiberty.c  amapRead.c
extraction-gym/abc-gamora/src/map/scl/: sclDnsize.c  sclLiberty.c  sclMLSize.d  sclSize.c  sclSize.h  sclUpsize.c
extraction-gym/abc-gamora/src/misc/util/: abc_global.h
extraction-gym/abc-gamora/src/proof/acec/: acecStruct.c  acecXor.c
extraction-gym/abc/src/map/scl/: sclDnsize.c
extraction-gym/abc/src/misc/util/: abc_global.h
extraction-gym/data/my_data/: graph_internal_serd.json
extraction-gym/out_dag_json/my_data/: graph_cost_serd_faster-bottom-up.json
extraction-gym/out_json/my_data/: result.json
extraction-gym/process_json/input_saturacted_egraph/: rewritten_egraph_with_weight_cost_serd.json
extraction-gym/src/: main.rs
extraction-gym/src/abc/src/map/amap/: amapRead.c
extraction-gym/src/abc/src/map/scl/: sclLiberty.c  sclSize.h
extraction-gym/src/egraph-serialize/: Cargo.toml
extraction-gym/src/egraph-serialize/src/: lib.rs
extraction-gym/src/extract/: bottom_up.rs  build.rs  circuit_conversion.rs  cost_conversion.rs  demo.rs  faster_bottom_up.rs  faster_greedy_dag.rs  global_greedy_dag.rs  greedy_dag.rs  lib.rs  mod.rs
extraction-gym/src/extract/tmp/: circuit_output.json  opt_1.el  opt_1.json  output.eqn
extraction-gym/src/giputils/: Cargo.toml
extraction-gym/src/giputils/cpp/: giputils.h
extraction-gym/src/giputils/src/: crffi.rs  grc.rs  gvec.rs  lib.rs  others.rs  statistic.rs
fuzz_abc_opt_flow/: FuzzWithRadomFlow.py  README.md  RandomFlowGenerator.sh  extract2csv.sh
graph2eqn/: Cargo.toml  circuit0.eqn
graph2eqn/adder_miter/: 11—adder_col_rf.eqn  adder_sweep.dimacs  graph_internal_serd_bottom-up  miter_adder.json  sexpr_for_egg.txt  sexpr_for_egg_1.txt
graph2eqn/src/: main.rs
grpc_communicator/: Makefile
motivation/: collect.py  plot.py
process_json/: Cargo.toml
process_json/out_process_result/: result.json
process_json/src/: main.rs
reproduce_expr/: arb.eqn  bar.eqn  ctrl.eqn  i2c.eqn  max.eqn  router.eqn  sin.eqn
result_visualization/: Plot_EarlyStop_Effect.ipynb  Plot_HyperVolumn.ipynb  others.ipynb
(+15 files in other folders)
