[package]
name = "e-rewriter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
egg = {version = "0.9.5", features = ["serde-1"] }
num = "0.4.0"
rand = "0.8"
ndarray = "0.15.4"
ndarray-rand = "0.14.0"
rayon = "1.7"
sprs = "0.11"
csv = "1.1"
once_cell = "1.18.0"
ordered-float = "4.2.0"
env_logger = { version = "0.10.1", default-features = false }
fxhash = "0.2.1"
hashbrown = "0.14.3"
indexmap = "1.8.1"
instant = "0.1.12"
log = "0.4.17"
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
symbol_table = { version = "0.3.0", features = ["global"] }
symbolic_expressions = "5.0.3"
thiserror = "1.0.31"
#xgboost = "0.1.4"
# for the serde-1 feature
serde = "1.0.137"
vectorize = { version = "0.2.0", optional = true }
serde_json = "1.0"
saturating = "0.1.0"
#graphviz-rust = "0.6.2"
egraph-serialize = { path = "/data/cchen/egraph-serialize/" }
extraction-gym = { path = "/data/cchen/extraction-gym/" }
[features]
# forces the use of indexmaps over hashmaps
deterministic = []
serde-1 = [
  "indexmap/serde-1",
  "hashbrown/serde",
  "symbol_table/serde",
  "vectorize",
]
wasm-bindgen = ["instant/wasm-bindgen"]
graphviz = ["dep:graphviz-rust"]
default = []  # 默认 feature
multi_round = []  # Feature 1
dag_cost = []  # Feature 1
feature3 = []  # Feature 1

[dependencies.graphviz-rust]
optional = true
version = "0.6.2"
