[package]
name = "process_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
clap =  { version = "4.4.8", features = ["derive"] }